--- a/continous.ipynb
+++ b/continous.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,33 +24,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/Users/kassywang/Documents/Summer Project/R/without outliers/Clean_complete_data_by_dipping_catergory.csv')\n",
-    "df = df.dropna(subset=[\"ratio_before\", \"ratio_after\"])  # Ensure both targets are available\n",
+    "df = pd.read_csv('/Users/kassywang/Documents/Summer Project/R/without outliers/continuous.csv')\n",
+    "df = df.dropna(subset=[\"ratio_before\", \"ratio_after\"])  \n",
     "\n",
     "df.columns = df.columns.str.lower()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "drop_cols = [\"study_id\", \"match_id\", \"calculated_classification\", \"ratio_before\", \"ratio_after\"]\n",
     "X = df.drop(columns=[col for col in drop_cols if col in df.columns])\n",
-    "X = pd.get_dummies(X, drop_first=True)  # encode categorical variables if any\n",
+    "X = pd.get_dummies(X, drop_first=True) \n",
     "\n",
-    "# Clean feature names for LightGBM\n",
     "X.columns = X.columns.str.replace('[^A-Za-z0-9_]+', '_', regex=True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,15 +115,12 @@
     "    \"Gradient Boosting\": GradientBoostingRegressor(random_state=42),\n",
     "    \"AdaBoost\": AdaBoostRegressor(random_state=42),\n",
     "    \"Extra Trees\": ExtraTreesRegressor(random_state=42),\n",
-    "    \"KNN\": KNeighborsRegressor(),\n",
-    "    \"SVR\": SVR(),\n",
-    "    \"MLP\": MLPRegressor(random_state=42, max_iter=1000)\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -169,8 +165,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000618 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000469 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 500\n",
       "[LightGBM] [Info] Number of data points in the train set: 489, number of used features: 21\n",
       "[LightGBM] [Info] Start training from score -0.066475\n",
@@ -298,15 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "📊 Performance with ratio_after (after outlier removal):\n",
+      "Performance with ratio_after (after outlier removal):\n",
       "                      MAE     MSE    RMSE      R2\n",
       "Linear Regression  0.0885  0.0143  0.1197 -2.7399\n",
       "Random Forest      0.0510  0.0041  0.0641 -0.0735\n",
@@ -322,8 +318,15 @@
     "after_df = pd.DataFrame(results[\"After Outlier Removal\"]).T.round(4)\n",
     "\n",
     "\n",
-    "print(\"\\n📊 Performance with ratio_after (after outlier removal):\")\n",
+    "print(\"Performance with ratio_after (after outlier removal):\")\n",
     "print(after_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reweighting"
    ]
   },
   {
@@ -357,7 +360,6 @@
     "best_model.fit(X_train, y_train)\n",
     "y_pred = best_model.predict(X_test)\n",
     "\n",
-    "# --- Plot 1: Observed vs. Predicted ---\n",
     "axes[0].scatter(y_test, y_pred, color='black', label='Predictions')\n",
     "axes[0].plot([y_test.min(), y_test.max()],\n",
     "             [y_test.min(), y_test.max()],\n",
@@ -368,7 +370,6 @@
     "axes[0].legend()\n",
     "axes[0].grid(True)\n",
     "\n",
-    "# --- Plot 2: Residuals ---\n",
     "residuals = y_pred - y_test\n",
     "\n",
     "axes[1].scatter(y_test, residuals, color='blue', alpha=0.7)\n",
@@ -378,10 +379,8 @@
     "axes[1].set_ylabel(\"Residual (Pred - Obs)\", fontsize=11)\n",
     "axes[1].grid(True)\n",
     "\n",
-    "# Optional overall title (if submitting as a figure in thesis)\n",
     "fig.suptitle(\"Model Calibration and Residual Diagnostics for ratio_before\", fontsize=14, y=1.05)\n",
     "\n",
-    "# Show the plot\n",
     "plt.show()\n"
    ]
   },
